made type changes
