# packages/server/spec/swagger.json
@@ -29,6 +29,37 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"Balances": {
+				"properties": {
+					"info": {}
+				},
+				"required": [
+					"info"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"StrategyError": {
+				"properties": {
+					"timestamp": {
+						"type": "number",
+						"format": "double"
+					},
+					"message": {
+						"type": "string"
+					},
+					"balance": {
+						"$ref": "#/components/schemas/Balances"
+					}
+				},
+				"required": [
+					"timestamp",
+					"message",
+					"balance"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"Fee": {
 				"properties": {
 					"type": {
@@ -227,39 +258,13 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"StrategyError": {
+			"BacktestResults": {
 				"properties": {
-					"timestamp": {
-						"type": "number",
-						"format": "double"
-					},
-					"message": {
-						"type": "string"
-					},
-					"balance": {
-						"properties": {},
-						"additionalProperties": {
-							"$ref": "#/components/schemas/Balance"
+					"errors": {
+						"items": {
+							"$ref": "#/components/schemas/StrategyError"
 						},
-						"type": "object"
-					}
-				},
-				"required": [
-					"timestamp",
-					"message",
-					"balance"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"Pick_SimulatedExchangeStore.Exclude_keyofSimulatedExchangeStore.currentTime-or-currentPrice__": {
-				"properties": {
-					"balance": {
-						"properties": {},
-						"additionalProperties": {
-							"$ref": "#/components/schemas/Balance"
-						},
-						"type": "object"
+						"type": "array"
 					},
 					"openOrders": {
 						"items": {
@@ -273,28 +278,18 @@
 						},
 						"type": "array"
 					},
-					"errors": {
-						"items": {
-							"$ref": "#/components/schemas/StrategyError"
-						},
-						"type": "array"
+					"balance": {
+						"$ref": "#/components/schemas/Balances"
 					}
 				},
 				"required": [
-					"balance",
+					"errors",
 					"openOrders",
 					"closedOrders",
-					"errors"
+					"balance"
 				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit_SimulatedExchangeStore.currentTime-or-currentPrice_": {
-				"$ref": "#/components/schemas/Pick_SimulatedExchangeStore.Exclude_keyofSimulatedExchangeStore.currentTime-or-currentPrice__",
-				"description": "Construct a type with the properties of T except for those in type K."
-			},
-			"BacktestResults": {
-				"$ref": "#/components/schemas/Omit_SimulatedExchangeStore.currentTime-or-currentPrice_"
+				"additionalProperties": false
 			},
 			"OHLCV_Candle": {
 				"properties": {
@@ -404,7 +399,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Record_ExchangeID.boolean_": {
+			"ExchangeStatuses": {
 				"properties": {
 					"binance": {
 						"type": "boolean"
@@ -416,8 +411,7 @@
 						"type": "boolean"
 					}
 				},
-				"type": "object",
-				"description": "Construct a type with a set of properties K of type T"
+				"type": "object"
 			},
 			"MinMax": {
 				"properties": {
@@ -759,7 +753,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/Record_ExchangeID.boolean_"
+									"$ref": "#/components/schemas/ExchangeStatuses"
 								}
 							}
 						}
